Tuesday, 26th November, Ron Steinke

	* Added a missing forward declaration of World to Factory.h

Monday, 18th November, Ron Steinke

	* Changed a bunch of accessors that returned std::string
	  to return const std::string& instead

Thursday, 14th November, Ron Steinke

	* Changed the second argument of Meta::ReceivedServerInfo
	  from ServerInfo to const ServerInfo&, fixed a typo

Tuesday, 12th November, Ron Steinke

	* Added an optional offset to Avatar::drop().
	* Split Avatar::InvChanged into Avatar::InvAdded
	  and Avatar::InvRemoved.

Wednesday, 6th November, Ron Steinke

	* Added a signal handler to set Avatar's _entity member
	* Added some inventory handling capabilities to Avatar

Tuesday, 5th November, Ron Steinke

	* Got Avatar working properly with OpRefnoDispatcher,
	  and changed existing references in the code to the
	  op:ig:foo dispatcher to use the appropriate per-World
	  dispatcher id. Taking/creating characters works again.

Sunday, 3rd November, Al Riddoch

	* configure.in: Clean up, and disable static by default.

Sunday, 3rd November, Al Riddoch

	* Add rpm spec.

Friday, 1st November, Al Riddoch

	* src/World.cpp: Fix calls to SigC::slot so it is sigc++ 1.2
	  compatable.

Friday, 1st November, Ron Steinke

	* Change ArgumentDispatcher to (new) OpRefnoDispatcher in Avatar
	* Change std::cerr to log(LOG_DEBUG,...) for debugging code

Friday, 1st November, Al Riddoch

	* src/World.cpp: ISO C++ does not allow default value for arg to be
	  specified in function definition.

Wednesday, 30th October, James Turner

	* Commit Ron's Avatar patches : currently got a bug
	  with the IG-transition INFO op, so don't update unless
	  you're doing dev work. Also bumped the version to 0.9.7
	  since this is an API change (rsteinke has diffs for silence
	  and sear, very minor).

Monday, 28th October 2002, Al Riddoch
	* Fix dispatcher removal for the imaginary emote ops fix made on the
	  9th. October.

Thursday, 24th October 2002, Al Riddoch