@@ -1,0 +1,3 @@
+Makefile.in
+Makefile
+perl-makefile.stamp
