@@ -1,4 +1,4 @@
-#include <Eris/Metaserver.h>
+#include "Metaserver.h"
 
 #include <sigcperl/signal_wrap.h>
 
