@@ -88,6 +88,19 @@ AC_ARG_ENABLE(python,
 )
 AM_CONDITIONAL(PYTHON_BINDINGS, test "x$enable_python" = "xyes")
 
+AC_ARG_ENABLE(perl, 
+[  --enable-perl         Enable building of Python bindings
+],
+[
+dnl testing for sigcperl should be sufficient, since that requires
+dnl perl and sucks in its CFLAGS and LIBS
+	AM_PATH_SIGCPERL(0.1.2,[],[
+		AC_MSG_WARN("libsigcperl not found, not building perl bindings")
+		enable_perl = no
+	])
+])
+AM_CONDITIONAL(PERL_BINDINGS, test "x$enable_perl" = "xyes")
+
 AM_PATH_CPPUNIT(1.6.1,
     [
 	enable_cppunit=yes
@@ -113,6 +126,7 @@ AC_SUBST(ERIS_CFLAGS)
 AC_OUTPUT([
 Makefile
 src/Makefile
+bindings/Makefile
 test/Makefile
 eris.dox
 eris-config
